* 05-Feb-2008: version 0.1_2
	- Introduced package Ddth::Commons::Exceptions:
		+ AbstractException
		+ IllegalArgumentException, IllegalStateException
		+ IOException
	- Introduced Properties module:
		+ Class(es): Properties

* 28-Jan-2008: version 0.1_1 (initial version)
	- Introduced Loader module:
		+ Interface(s): IClassNameTranslator
		+ Class(es): Loader, DefaultClassNameTranslator